<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">地铁计算器</string>
	<string name="carrier_number">车体号</string>
	<string name="calculate">计算!</string>
	<string name="line">线路:</string>
	<string name="train_number">车号:</string>
	<string name="train_type">车型:</string>
	<string name="not_found">未能找到车体号 %c ,请检查输入(永远不要把车厢号当车体号!)</string>
	<string name="author">by @南华假人</string>
	<string name="line_pujiang">浦江线</string>
	<string name="line_jieyun01">浦东机场捷运</string>
	<string name="open">打开</string>
	<string name="update">更新</string>
	<string name="close">关闭</string>
	<string name="about">关于</string>
	<string name="learn_calculate">学习公式</string>
	<string name="loading">加载中...</string>
	<string name="traintype_01a01">01A01老老八</string>
	<string name="traintype_01a02">01A02伪八二世</string>
	<string name="traintype_01a03">01A03老八</string>
	<string name="traintype_01a04">01A04伪八</string>
	<string name="traintype_01a05">01A05胖头鱼</string>
	<string name="traintype_01a06">01A06钢铁侠</string>
	<string name="traintype_01a07">01A07钢铁侠二世</string>
	<string name="traintype_02a01">02A01西瓜</string>
	<string name="traintype_02a02">02A02青鱼</string>
	<string name="traintype_02a03">02A03鲶鱼</string>
	<string name="traintype_02a04">02A04小鲶鱼/扩编鲶鱼</string>
	<string name="traintype_02a05">02A05绿灯侠</string>
	<string name="traintype_03a01">03A01黄鱼</string>
	<string name="traintype_03a02">03A02包公</string>
	<string name="traintype_04a01">04A01奶嘴</string>
	<string name="traintype_04a02">04A02包公</string>
	<string name="traintype_04a02_lent">04A02叛徒包公(已出借给3号线)</string>
	<string name="traintype_05c01">05C01番茄炒蛋</string>
	<string name="traintype_05c02">05C02紫罗兰</string>
	<string name="traintype_06c01">06C01KITTY</string>
	<string name="traintype_06c02">06C02纸花木兰</string>
	<string name="traintype_06c03">06C03电花木兰</string>
	<string name="traintype_06c04">06C04花木兰三世</string>
	<string name="traintype_07a01">07A01芬达</string>
	<string name="traintype_07a02">07A02邦迪</string>
	<string name="traintype_08c01">08C01蓝精灵</string>
	<string name="traintype_08c02">08C02纸泥鳅</string>
	<string name="traintype_08c03">08C03电泥鳅</string>
	<string name="traintype_08c04">08C04泥鳅三世</string>
	<string name="traintype_09a01">09A01蚕宝宝</string>
	<string name="traintype_09a02">09A02坂田</string>
	<string name="traintype_09ash">09ASH电气男孩</string>
	<string name="traintype_09a03">09A03创可贴</string>
	<string name="traintype_10a01">10A01热带鱼</string>
	<string name="traintype_10a02">10A02热带鱼二世</string>
	<string name="traintype_11a01">11A01奶咖</string>
	<string name="traintype_11a02">11A02伪咖</string>
	<string name="traintype_11a03">11A03奶咖二世</string>
	<string name="traintype_12a01">12A01雪碧</string>
	<string name="traintype_12a02">12A02雪碧二世</string>
	<string name="traintype_13a01">13A01奶粉</string>
	<string name="traintype_13a02">13A02奶粉二世</string>
	<string name="traintype_16a01">16A01抹茶</string>
	<string name="traintype_16a02">16A02抹茶二世</string>
	<string name="traintype_17a01">17A01西柚</string>
	<string name="traintype_apm300">APM300草鱼/小灰灰</string>
	<string name="traintype_unknown">未知车型</string>
	<string name="dark_mode_on">夜间模式:开</string>
	<string name="dark_mode_off">夜间模式:关</string>
	<string name="require_restart">必须重启才能应用更改!</string>
	<string name="picture_too_light">图片较亮，是否查看?</string>
	<string name="show">查看</string>
	<string name="link_copied">已复制链接和提取码!</string>
</resources>
