<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:fitsSystemWindows="true">

	<android.support.v7.widget.Toolbar
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/toolbar"/>

	<android.support.v4.widget.DrawerLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:id="@+id/drawerlayout">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:padding="15dp">

			<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/input"
				android:hint="@string/carrier_number"
				android:singleLine="true"/>

			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:onClick="calculate"
				android:text="@string/calculate"
				android:background="@drawable/button"
				android:layout_marginTop="15dp"/>

			<ScrollView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginTop="15dp">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/result"
					android:text="@string/author"/>

			</ScrollView>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_gravity="start"
			android:gravity="left|top"
			android:orientation="vertical"
			android:background="@color/colorPrimaryDark">

			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/dark_mode_off"
				android:layout_margin="10dp"
				android:padding="10dp"
				android:onClick="onDarkModeClick"
				android:id="@+id/mainTextView1"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/learn_calculate"
				android:onClick="onLearnClick"
				android:padding="10dp"
				android:layout_margin="10dp"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/about"
				android:onClick="onAboutClick"
				android:padding="10dp"
				android:layout_margin="10dp"/>

		</LinearLayout>

	</android.support.v4.widget.DrawerLayout>

</LinearLayout>

